# Linux2HW2

./: CMakeLists.txt  Q4data.csv  README.md  build.sh  clean.sh
include/: Question1.hpp  Question2.hpp  Question3.hpp  Question4.hpp  Question5.h  helpers.h
main/: main.cpp
results/: results.txt
src/: Question1.cpp  Question2.cpp  Question3.cpp  Question4.cpp  Question5.cpp
